--- a/templates/SyliusShopBundle/Checkout/hipay_fields.html.twig
+++ b/templates/SyliusShopBundle/Checkout/hipay_fields.html.twig
@@ -1,3 +1,11 @@
+{#
+# This file is part of the HipaySyliusPlugin
+#
+# (c) Smile <dirtech@smile.fr>
+#
+# For the full copyright and license information, please view the LICENSE
+# file that was distributed with this source code.
+#}
 <div
     class="hipay-div-config"
     data-config-username="{{ apiConfig.username }}"
