--- a/templates/Iframe/hipay_oney_iframe_content.html.twig
+++ b/templates/Iframe/hipay_oney_iframe_content.html.twig
@@ -6,31 +6,9 @@
 # For the full copyright and license information, please view the LICENSE
 # file that was distributed with this source code.
 #}
+{% extends '@SmileHipaySyliusPlugin/Iframe/Layout/hipay_oney_iframe_body_layout.html.twig' %}
 {% form_theme form '@SyliusShop/Form/theme.html.twig' %}
 
-<!-- @TODO move the whole HTML wrapper to an independant layout -->
-<!DOCTYPE html>
-<html lang="{{ app.request.locale|slice(0, 2) }}">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>{% block title %}{{ sylius.channel.name }}{% endblock %}</title>
-
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-
-    {% block metatags %}
-    {% endblock %}
-
-    {% block stylesheets %}
-        {{ sylius_template_event('sylius.shop.layout.stylesheets') }}
-    {% endblock %}
-
-    {{ sylius_template_event('sylius.shop.layout.head') }}
-</head>
-
-<body class="pushable">
-{{ sylius_template_event('sylius.shop.layout.before_body') }}
 {% block content %}
     <div class="pusher">
         {% include '@SyliusShop/_flashes.html.twig' %}
@@ -40,21 +18,17 @@
                 {{ sylius_template_event('sylius.shop.account.profile.update.after_content_header', {'customer': customer, 'form': form}) }}
 
                 <input type="hidden" name="_method" value="PUT" />
-
-                <div class="two fields">
-                    {#
-                    <div class="field">{{ form_row(form.firstName, sylius_test_form_attribute('first-name')) }}</div>
-                    #}
-                    {#
-                    <div class="field">{{ form_row(form.lastName, sylius_test_form_attribute('last-name')) }}</div>
-                    #}
+                <div>
+                    {{ form_row(form.email, sylius_test_form_attribute('email')) }}
+                    <small>
+                        {{ 'smile_hipay_sylius_plugin.ui.oney.email_link'|trans({'%link_start%' : '<a href="'~path('sylius_shop_account_profile_update')~'">', '%link_end%' : '</a>'})|raw }}
+                    </small>
                 </div>
 
-                {{ form_row(form.email, sylius_test_form_attribute('email')) }}
                 <div class="two fields">
                     <div class="field">{{ form_row(form.birthday) }}</div>
+                    <div class="field">{{ form_row(form.phoneNumber) }}</div>
                 </div>
-                {{ form_row(form.phoneNumber) }}
 
                 {{ sylius_template_event('sylius.shop.account.profile.update.form', {'customer': customer, 'form': form}) }}
 
@@ -63,13 +37,11 @@
                 {{ form_end(form, {'render_rest': false}) }}
             </div>
         </div>
-</div>
+    </div>
+    <script type="application/javascript">
+        window.parent.postMessage('{"hipay_customer_profile": {"is_valid": {{ form.vars.valid and form.vars.submitted ? 'true' : 'false' }}}}');
+        {% if not form.vars.submitted and not isOneyCustomerValid(customer)%}
+        document.forms["{{ form.vars.name }}"].submit();
+        {% endif %}
+    </script>
 {% endblock %}
-
-{% block javascripts %}
-    {{ sylius_template_event('sylius.shop.layout.javascripts') }}
-{% endblock %}
-
-{{ sylius_template_event('sylius.shop.layout.after_body') }}
-</body>
-</html>
