Fixed some @todo + made some Iframe javascript improvements for Honey payments

--- a/templates/Iframe/hipay_oney_iframe.html.twig
+++ b/templates/Iframe/hipay_oney_iframe.html.twig
@@ -1,5 +1,5 @@
 <!--@todo CSS work -->
-<div id="hipay-form-{{ gateway }}" class="hipay-form" style="display: none;">
+<div id="hipay-form-{{ gateway }}" class="hipay-form hipay-form-iframe" style="display: none;">
     <div>
         <strong style="color: red;">{{ "smile_hipay_sylius_plugin.ui.oney.form_review_warning"|trans }}</strong>
     </div>
