--- a/templates/Iframe/hipay_oney_iframe_content.html.twig
+++ b/templates/Iframe/hipay_oney_iframe_content.html.twig
@@ -21,7 +21,8 @@
                 <div>
                     {{ form_row(form.email, sylius_test_form_attribute('email')) }}
                     <small>
-                        {{ 'smile_hipay_sylius_plugin.ui.oney.email_link'|trans({'%link_start%' : '<a href="'~path('sylius_shop_account_profile_update')~'">', '%link_end%' : '</a>'})|raw }}
+{# Temporarily commented as the sylius_shop_account_profile_update route is deactivated in the Camif app #}
+{#                        {{ 'smile_hipay_sylius_plugin.ui.oney.email_link'|trans({'%link_start%' : '<a href="'~path('sylius_shop_account_profile_update')~'">', '%link_end%' : '</a>'})|raw }}#}
                     </small>
                 </div>
 
